# t-invest-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  accounts.py  bot.py  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: deploy.yml
app/: __init__.py  bot.py  config.py  invest.py
app/core/: config.py  database.py  enums.py
app/database/: __init__.py  database.py
app/handlers/: __init__.py  base.py  base_handlers.py  coupon_handlers.py  registration.py  setting_handlers.py
app/invest/: bonds.py  invest.py  models.py  price_monitor.py  tbank_client.py
app/keyboards/: __init__.py  main_keyboards.py
app/models/: alerts.py  base.py  user.py
app/reports/: coupons.py
app/services/: __init__.py  price_alert_service.py  report_service.py
app/storage/: __init__.py  alert_storage.py  bot_user_storage.py  user_storage.py
app/utils/: __init__.py  bot_utils.py  datetime_utils.py
