[project]
name = "tinek-invest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "certifi>=2025.10.5",
    "dotenv>=0.9.9",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "tinkoff-investments>=0.2.0b117",
    "watchfiles>=1.1.0",
]
