[project]
name = "tinek-invest"
version = "0.1.0"
description = "Telegram bot for T-Invest bond portfolio management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "certifi>=2024.0.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
]
